--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@types/testing-library__jest-dom": "5.14.0",
     "@types/webpack": "5.28.0",
     "@types/webpack-env": "1.16.2",
+    "autoprefixer": "10.3.7",
     "chalk": "4.1.1",
     "cross-env": "7.0.3",
     "eslint-config-prettier": "8.3.0",
@@ -36,6 +37,7 @@
     "lint-staged": "10.3.0",
     "node-plop": "0.26.2",
     "plop": "2.7.4",
+    "postcss": "8.3.11",
     "prettier": "2.3.2",
     "react": "17.0.2",
     "react-app-polyfill": "2.0.0",
@@ -57,6 +59,7 @@
     "stylelint-config-recommended": "5.0.0",
     "stylelint-config-styled-components": "0.1.1",
     "stylelint-processor-styled-components": "1.10.0",
+    "tailwindcss": "2.2.17",
     "ts-node": "10.0.0",
     "typescript": "4.2.2",
     "web-vitals": "2.1.0"
