--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,7 +45,6 @@
     "react-redux": "7.2.4",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
-    "react-test-renderer": "17.0.2",
     "redux-injectors": "1.3.0",
     "redux-saga": "1.1.3",
     "rimraf": "3.0.2",
@@ -108,7 +107,10 @@
       "!src/**/*/Loadable.{js,jsx,ts,tsx}",
       "!src/**/*/messages.ts",
       "!src/**/*/types.ts",
-      "!src/index.tsx"
+      "!src/index.tsx",
+      "!src/reportWebVitals.ts",
+      "!src/utils/*",
+      "!src/locales/*"
     ],
     "coverageThreshold": {
       "global": {
@@ -118,5 +120,10 @@
         "statements": 90
       }
     }
+  },
+  "devDependencies": {
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-17-updated": "1.0.2",
+    "enzyme-to-json": "3.6.2"
   }
 }
