--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ jobs:
         - pip install -r requirements.txt
         - cd app
       script: 
-        - pylint **/*.py --load-plugins pylint_django
+        - pylint app
         - coverage run --source='.' manage.py test
         - coverage xml
     - language: node_js
