--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.projectName=swpp2021-team9
 sonar.projectVersion=1.0
 sonar.sources=backend,frontend/src
 sonar.tests=backend,frontend/src
-sonar.exclusions=backend/**/migrations/*,frontend/src/index.js,frontend/src/serviceWorker.js
-sonar.test.inclusions=backend/**/tests.py,frontend/src/**/*.test.js
+sonar.exclusions=backend/**/migrations/*,frontend/src/**/*/*.d.ts,frontend/src/**/*/Loadable.{js,jsx,ts,tsx},frontend/src/**/*/messages.ts,frontend/src/**/*/types.ts,frontend/src/index.tsx,frontend/src/reportWebVitals.ts,frontend/src/setupTests.js,frontend/src/utils/*,frontend/src/locales/*
+sonar.test.inclusions=backend/**/tests.py,frontend/src/**/*.test.{js,jsx,ts,tsx}
 sonar.python.coverage.reportPaths=backend/coverage.xml
 sonar.javascript.lcov.reportPaths=frontend/coverage/lcov.info
