--- a/.travis.yml
+++ b/.travis.yml
@@ -15,18 +15,18 @@ jobs:
       install:
         - source ~/virtualenv/python3.7/bin/activate
         - pip install -r backend/requirements.txt
+        - pip install overalls
         - cd frontend
         - yarn install
-        - pip install overalls
         - yarn global add coveralls
         - gem install coveralls-lcov
+        - cd ..
       script:
-        - ./node_modules/.bin/eslint src
+        - cd frontend && ./node_modules/.bin/eslint src
         - yarn test --coverage --watchAll=false
         - coveralls-lcov -v -n coverage/lcov.info > coverage.json
-        - cd ../backend
-        - pylint app
-        - coverage run --source='.' manage.py test
+        - cd ../backend && pylint app
+        - cd app && coverage run --source='.' manage.py test
         - coverage xml
-        - cd .. && sonar-scanner
+        - cd ../.. && sonar-scanner
         - coveralls --merge=frontend/coverage.json
