--- a/frontend/package.json
+++ b/frontend/package.json
@@ -63,6 +63,7 @@
   "devDependencies": {
     "@testing-library/dom": "8.10.1",
     "@testing-library/user-event": "13.5.0",
+    "@types/enzyme": "3.10.10",
     "autoprefixer": "^9",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-17-updated": "1.0.2",
