--- a/.travis.yml
+++ b/.travis.yml
@@ -28,5 +28,5 @@ jobs:
         - cd ../backend && pylint app
         - cd app && coverage run --source='.' manage.py test
         - coverage xml
-        - cd ../.. && sonar-scanner
-        - coveralls --merge=frontend/coverage.json
+        - coveralls --merge=../../frontend/coverage.json
+        - cd ../../ && sonar-scanner
