typo in .travis.yml
coveralls -> coveralls

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ jobs:
       install:
         - source ~/virtualenv/python3.7/bin/activate
         - pip install -r backend/requirements.txt
-        - pip install overalls
+        - pip install coveralls
         - cd frontend
         - yarn install
         - yarn global add coveralls
