--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
     "react-dom": "17.0.2",
     "react-helmet-async": "1.0.9",
     "react-i18next": "11.11.1",
+    "react-media-recorder": "1.6.2",
     "react-player": "2.9.0",
     "react-redux": "7.2.4",
     "react-router-dom": "5.2.0",
@@ -62,6 +63,7 @@
     "stylelint-processor-styled-components": "1.10.0",
     "ts-node": "10.0.0",
     "typescript": "4.2.2",
+    "wavesurfer.js": "5.2.0",
     "web-vitals": "2.1.0"
   },
   "devDependencies": {
