--- a/frontend/package.json
+++ b/frontend/package.json
@@ -62,6 +62,7 @@
     "stylelint-config-styled-components": "0.1.1",
     "stylelint-processor-styled-components": "1.10.0",
     "ts-node": "10.0.0",
+    "typesafe-actions": "5.1.0",
     "typescript": "4.2.2",
     "wavesurfer.js": "5.2.0",
     "web-vitals": "2.1.0"
