--- a/frontend/package.json
+++ b/frontend/package.json
@@ -124,14 +124,15 @@
   "jest": {
     "collectCoverageFrom": [
       "src/**/*.{js,jsx,ts,tsx}",
-      "!src/**/*/*.d.ts",
+      "!src/**/*.d.ts",
       "!src/**/*/Loadable.{js,jsx,ts,tsx}",
       "!src/**/*/messages.ts",
       "!src/**/*/types.ts",
       "!src/index.tsx",
       "!src/reportWebVitals.ts",
       "!src/setupTests.js",
-      "!src/utils/*",
+      "!src/utils/**/*",
+      "!src/types/**/*",
       "!src/locales/*"
     ],
     "coverageThreshold": {
