--- a/frontend/package.json
+++ b/frontend/package.json
@@ -68,6 +68,7 @@
     "web-vitals": "2.1.0"
   },
   "devDependencies": {
+    "@redux-saga/testing-utils": "1.1.3",
     "@testing-library/dom": "8.10.1",
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "12.1.2",
