--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,6 +5,6 @@ sonar.projectVersion=1.0
 sonar.sources=backend/app,frontend/src
 sonar.tests=backend/app,frontend/src
 sonar.exclusions=backend/**/migrations/*,frontend/src/**/*/*.d.ts,frontend/src/**/*.test.ts,frontend/src/**/*.test.tsx,frontend/src/**/*/messages.ts,frontend/src/**/*/types.ts,frontend/src/index.tsx,frontend/src/reportWebVitals.ts,frontend/src/setupTests.js,frontend/src/utils/*,frontend/src/locales/*
-sonar.test.inclusions=backend/**/tests.py,frontend/src/**/*.test.ts,frontend/src/**/*.test.tsx
+sonar.test.inclusions=backend/**/test*.py,frontend/src/**/*.test.ts,frontend/src/**/*.test.tsx
 sonar.python.coverage.reportPaths=backend/app/coverage.xml
 sonar.javascript.lcov.reportPaths=frontend/coverage/lcov.info
