--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@types/testing-library__jest-dom": "5.14.0",
     "@types/webpack": "5.28.0",
     "@types/webpack-env": "1.16.2",
+    "axios": "0.24.0",
     "chalk": "4.1.1",
     "cross-env": "7.0.3",
     "eslint-config-prettier": "8.3.0",
