--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,8 +37,10 @@
     "inquirer": "7.3.3",
     "inquirer-directory": "2.2.0",
     "jest-styled-components": "7.0.4",
+    "konva": "8.3.0",
     "lint-staged": "10.3.0",
     "node-plop": "0.26.2",
+    "peaks.js": "0.27.0",
     "plop": "2.7.4",
     "prettier": "2.3.2",
     "react": "17.0.2",
@@ -64,6 +66,7 @@
     "ts-node": "10.0.0",
     "typesafe-actions": "5.1.0",
     "typescript": "4.2.2",
+    "waveform-data": "4.3.0",
     "wavesurfer.js": "5.2.0",
     "web-vitals": "2.1.0"
   },
