--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "inquirer-directory": "2.2.0",
     "jest-styled-components": "7.0.4",
     "konva": "8.3.0",
+    "lamejs": "1.2.0",
     "lint-staged": "10.3.0",
     "node-plop": "0.26.2",
     "peaks.js": "0.27.0",
