--- a/frontend/package.json
+++ b/frontend/package.json
@@ -132,8 +132,7 @@
   },
   "jest": {
     "moduleNameMapper": {
-      "^konva": "konva/konva",
-      "\\.(jpg|ico|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "src/__mocks__/fileMock.js"
+      "^konva": "konva/konva"
     },
     "collectCoverageFrom": [
       "src/**/*.{js,jsx,ts,tsx}",
