Add Https and SSL config

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,5 +1,9 @@
 server {
-  listen 80;
+  server_name metaband.space;
+  listen 443 ssl http2;
+  ssl on;
+  ssl_certificate     /etc/letsencrypt/live/metaband.space/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/metaband.space/privkey.pem;
   location / {
     root /usr/app/build;
     index index.html index.htm;
@@ -7,5 +11,13 @@ server {
   }
   location /api {
     proxy_pass http://13.125.247.133:8000/api;
+  }
+}
+
+server{
+  server_name metaband.space;
+  listen 80;
+    location / {
+      return 301 https://$server_name$request_uri;
   }
 }
