--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     ports:
       - 443:443
     command: nginx -g "daemon off;"
+    volumes:
+      - /etc/letsencrypt/:/etc/letsencrypt/
     restart: always
 
   back:
