--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -4,6 +4,7 @@ server {
   ssl on;
   ssl_certificate     /etc/letsencrypt/live/metaband.space/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/metaband.space/privkey.pem;
+  proxy_set_header X-Forwarded-Proto https;
   location / {
     root /usr/app/build;
     index index.html index.htm;
@@ -11,6 +12,9 @@ server {
   }
   location /api {
     proxy_pass http://13.125.247.133:8000/api;
+  }
+  location /media {
+    proxy_pass http://13.125.247.133:8000/media;
   }
 }
 
