--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -14,7 +14,7 @@ server {
     proxy_pass http://13.125.247.133:8000/api;
   }
   location /media {
-    alias /srv/media/
+    alias /srv/media/;
   }
 }
 
