--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,3 +6,5 @@ Pillow==8.4.0
 djangorestframework==3.12.4
 mysqlclient==2.0.3
 django-cors-headers==3.10.1
+APScheduler==3.2.0
+django-apscheduler==0.6.0
