--- a/backend/.pylintrc
+++ b/backend/.pylintrc
@@ -1,6 +1,6 @@
 [MASTER]
 
-disable=duplicate-code
+disable=duplicate-code, broad-except
 
 # A comma-separated list of package or module names from where C extensions may
 # be loaded. Extensions are loading into the active Python interpreter and may
