--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ jobs:
         - yarn test --coverage --watchAll=false
         - coveralls-lcov -v -n coverage/lcov.info > coverage.json
         - cd ../backend && pylint app
-        - cd app && manage.py migrate 
+        - cd app && python3 manage.py migrate 
         - coverage run --source='.' manage.py test
         - coverage xml
         - coveralls --merge=../../frontend/coverage.json
