file upload size and loading

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -5,6 +5,7 @@ server {
   ssl_certificate     /etc/letsencrypt/live/metaband.space/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/metaband.space/privkey.pem;
   proxy_set_header X-Forwarded-Proto https;
+  client_max_body_size 20M;
   location / {
     root /usr/app/build;
     index index.html index.htm;
@@ -20,6 +21,7 @@ server {
 
 server{
   server_name metaband.space;
+  client_max_body_size 20M;
   listen 80;
     location / {
       return 301 https://$server_name$request_uri;
