fix sonar config

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.projectName=swpp2021-team9
 sonar.projectVersion=1.0
 sonar.sources=backend/app,frontend/src
 sonar.tests=backend/app,frontend/src
-sonar.exclusions=backend/**/migrations/*,frontend/src/**/*/*.d.ts,frontend/src/**/*.test.ts,frontend/src/**/*.test.tsx,frontend/src/**/*/messages.ts,frontend/src/**/*/types.ts,frontend/src/index.tsx,frontend/src/reportWebVitals.ts,frontend/src/setupTests.js,frontend/src/utils/*,frontend/src/locales/*,frontend/src/__mocks__/*
+sonar.exclusions=backend/**/migrations/*, backend/locustfile.py, frontend/src/**/*/*.d.ts,frontend/src/**/*.test.ts,frontend/src/**/*.test.tsx,frontend/src/**/*/messages.ts,frontend/src/**/*/types.ts,frontend/src/index.tsx,frontend/src/reportWebVitals.ts,frontend/src/setupTests.js,frontend/src/utils/*,frontend/src/locales/*,frontend/src/__mocks__/*
 sonar.test.inclusions=backend/**/test*.py,frontend/src/**/*.test.ts,frontend/src/**/*.test.tsx
 sonar.python.coverage.reportPaths=backend/app/coverage.xml
 sonar.javascript.lcov.reportPaths=frontend/coverage/lcov.info
